--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Hospitalapps">
+
+        <!-- Activity utama -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -18,10 +20,21 @@
             android:theme="@style/Theme.Hospitalapps">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- ✅ Tambahkan activity baru untuk Riwayat -->
+        <activity
+            android:name=".RiwayatActivity"
+            android:label="Riwayat Perawatan"
+            android:parentActivityName=".MainActivity">
+            <!-- Supaya tombol back otomatis kembali ke MainActivity -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+
     </application>
 
 </manifest>
