--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,7 +76,7 @@
 
 
 
-        <!-- 🔹 Tambahkan ini -->
+        <!-- edit profile user -->
         <activity
             android:name=".EditUserActivity"
             android:label="Edit Data Diri"
