--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,6 +18,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Hospitalapps">
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
 
         <!-- Launcher (pertama kali dibuka) -->
         <activity
@@ -41,6 +54,11 @@
             android:name=".ShowActivity"
             android:label="Detail Data" />
         <activity android:name=".VerifikasiPasienActivity" />
+        <activity
+            android:name=".AdminLaporanActivity"
+            android:exported="true"
+            android:label="Laporan Admin" />
+
 
         <!-- Aktivitas lain -->
         <activity android:name=".AntrianActivity" android:label="Cek Antrian" />
