--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,10 @@
         android:maxSdkVersion="28" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="YOUR_API_KEY_HERE"/>
+
 
     <application
         android:networkSecurityConfig="@xml/network_security_config"
@@ -27,7 +31,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
-
+        <activity android:name=".MapActivity" />
         <!-- Launcher (pertama kali dibuka) -->
         <activity
             android:name=".MainActivity"
