--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="28" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="28" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="28" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <meta-data
         android:name="com.google.android.geo.API_KEY"
         android:value="YOUR_API_KEY_HERE"/>
-
 
     <application
         android:networkSecurityConfig="@xml/network_security_config"
@@ -21,7 +20,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Hospitalapps">
+        android:theme="@style/Theme.Hospitalapps"
+        android:usesCleartextTraffic="true">
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
@@ -31,14 +32,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
-        <activity android:name=".MapActivity" />
-        <activity android:name=".DoctorActivity" />
 
-        <activity android:name=".ProfilActivity" />
-
-
-
-        <!-- Launcher -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -49,43 +43,43 @@
             </intent-filter>
         </activity>
 
-        <!-- Login dan Register -->
+        <activity android:name=".PasienAntrianActivity"/>
+
+        <activity android:name=".PasienRiwayatActivity" android:label="Riwayat Saya"/>
+
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
 
-        <!-- Halaman Admin -->
+        <activity android:name=".UserActivity" android:label="Profil Pengguna" />
+        <activity android:name=".EditUserActivity" android:label="Edit Data Diri" />
+        <activity android:name=".DiseaseSearchActivity" />
+        <activity android:name=".ScheduleActivity" android:label="Jadwal Dokter" />
+        <activity android:name=".ConfirmationActivity" android:label="Konfirmasi Janji" />
+        <activity android:name=".DoctorListActivity" android:label="Daftar Dokter" />
+        <activity android:name=".MapActivity" />
+
+        <activity android:name=".DoctorActivity" />
+        <activity android:name=".AntrianActivity" android:label="Cek Antrian" />
+        <activity android:name=".PerawatanActivity" android:label="Riwayat Perawatan" />
+        <activity android:name=".ProfilActivity" />
+
         <activity
             android:name=".AdminActivity"
             android:exported="false"
             android:label="Admin Dashboard" />
-
-        <!-- Tambahkan ShowActivity -->
-        <activity
-            android:name=".ShowActivity"
-            android:label="Detail Data" />
+        <activity android:name=".ShowActivity" android:label="Detail Data" />
         <activity android:name=".VerifikasiPasienActivity" />
         <activity
             android:name=".AdminLaporanActivity"
             android:exported="true"
             android:label="Laporan Admin" />
 
-
-        <!-- Aktivitas lain -->
-        <activity android:name=".AntrianActivity" android:label="Cek Antrian" />
-        <activity android:name=".PerawatanActivity" android:label="Riwayat Perawatan" />
-        <activity android:name=".ScheduleActivity" android:label="Jadwal Dokter" />
-        <activity android:name=".ConfirmationActivity" android:label="Konfirmasi Janji" />
-        <activity android:name=".DoctorListActivity" android:label="Daftar Dokter" />
-        <activity android:name=".UserActivity" android:label="Profil Pengguna" />
-        <activity android:name=".EditUserActivity" android:label="Edit Data Diri" />
-        <activity android:name=".DiseaseSearchActivity" />
-
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
             tools:replace="android:screenOrientation"
             android:stateNotNeeded="true" />
-    </application>
 
+    </application>
 
 </manifest>
